Add animation for initial rows; fade number only on pair; then some chnages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,5 +30,6 @@ flutter:
   assets:
     - assets/videos/splash.mp4
     - assets/audio/tz.mp3
+    - assets/audio/
     - assets/images/
     - assets/videos/game.mp4
